# IPC_playground

./: .gitignore  readme.md
adder/: readme.md
adder/busywaiting/: main  main.cpp  readme.md
peterson/: main
producer_consumer/: readme.md
producer_consumer/ipc/peterson/: .output.txt.swp
producer_consumer/ipc/spinlocks/: main
producer_consumer/pthreads/nosync/: CMakeLists.txt  main.cpp  readme.md
producer_consumer/sleep_wakeup/: main.cpp
spinlocks/: main.cpp
